# ins_ekf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/ins_ekf/: ins_ekf.h  ins_ekf_types.h  ins_ekf_utilities.h
scripts/: plot_estimates.py
src/: ins_ekf.cpp  ins_ekf_utilities.cpp  main.cpp
